--- a/Gestion_Centre_Formations/Views/Home/Index.cshtml
+++ b/Gestion_Centre_Formations/Views/Home/Index.cshtml
@@ -5,56 +5,35 @@
     ViewBag.Title = "Accueil";
 }
 
-<div class="main-banner" id="top">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="col-lg-12">
-                    <div class="owl-carousel owl-banner">
-                        <div class="item item-1">
-                            <div class="header-text">
-                                <span class="category">Our Courses</span>
-                                <h2>With Taʿallam Teachers, Everything Is Easier</h2>
-                                <p>Scholar is free CSS template designed by TemplateMo for online educational related websites. This layout is based on the famous Bootstrap v5.3.0 framework.</p>
-                                <div class="buttons">
-                                    <div class="main-button">
-                                        <a href="#">Request Demo</a>
-                                    </div>
-                                    <div class="icon-button">
-                                        <a href="#"><i class="fa fa-play"></i> What's Taʿallam?</a>
-                                    </div>
-                                </div>
-                            </div>
+<div class="container-fluid p-0 mb-5">
+    <div class="owl-carousel header-carousel position-relative">
+        <div class="owl-item position-relative">
+            <img class="img-fluid" src="@Url.Content("~/assets/img/carousel-1.jpg")" alt="">
+            <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
+                <div class="container">
+                    <div class="row justify-content-start">
+                        <div class="col-sm-10 col-lg-8">
+                            <h5 class="text-primary text-uppercase mb-3 animated slideInDown">Best Online Courses</h5>
+                            <h1 class="display-3 text-white animated slideInDown">The Best Online Learning Platform</h1>
+                            <p class="fs-5 text-white mb-4 pb-2">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea sanctus eirmod elitr.</p>
+                            <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
+                            <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Join Now</a>
                         </div>
-                        <div class="item item-2">
-                            <div class="header-text">
-                                <span class="category">Best Result</span>
-                                <h2>Get the best result out of your effort</h2>
-                                <p>You are allowed to use this template for any educational or commercial purpose. You are not allowed to re-distribute the template ZIP file on any other website.</p>
-                                <div class="buttons">
-                                    <div class="main-button">
-                                        <a href="#">Request Demo</a>
-                                    </div>
-                                    <div class="icon-button">
-                                        <a href="#"><i class="fa fa-play"></i> What's the best result?</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item item-3">
-                            <div class="header-text">
-                                <span class="category">Online Learning</span>
-                                <h2>Online Learning helps you save the time</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temporious incididunt ut labore et dolore magna aliqua suspendisse.</p>
-                                <div class="buttons">
-                                    <div class="main-button">
-                                        <a href="#">Request Demo</a>
-                                    </div>
-                                    <div class="icon-button">
-                                        <a href="#"><i class="fa fa-play"></i> What's Online Course?</a>
-                                    </div>
-                                </div>
-                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="owl-item position-relative">
+            <img class="img-fluid" src="@Url.Content("~/assets/img/carousel-2.jpg")" alt="">
+            <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
+                <div class="container">
+                    <div class="row justify-content-start">
+                        <div class="col-sm-10 col-lg-8">
+                            <h5 class="text-primary text-uppercase mb-3 animated slideInDown">Best Online Courses</h5>
+                            <h1 class="display-3 text-white animated slideInDown">Get Educated Online From Your Home</h1>
+                            <p class="fs-5 text-white mb-4 pb-2">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea sanctus eirmod elitr.</p>
+                            <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
+                            <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Join Now</a>
                         </div>
                     </div>
                 </div>
@@ -62,103 +41,68 @@
         </div>
     </div>
 </div>
-<section class="section courses" id="courses">
+<!-- Carousel End -->
+<!-- Service Start -->
+<div class="container-xxl py-5">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <div class="section-heading">
-                    <h6>Derniere Formations</h6>
-                    <h2>Derniere Formations</h2>
+        <div class="row g-4">
+            <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="service-item text-center pt-3">
+                    <div class="p-4">
+                        <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
+                        <h5 class="mb-3">Skilled Instructors</h5>
+                        <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="service-item text-center pt-3">
+                    <div class="p-4">
+                        <i class="fa fa-3x fa-globe text-primary mb-4"></i>
+                        <h5 class="mb-3">Online Classes</h5>
+                        <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
+                <div class="service-item text-center pt-3">
+                    <div class="p-4">
+                        <i class="fa fa-3x fa-home text-primary mb-4"></i>
+                        <h5 class="mb-3">Home Projects</h5>
+                        <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
+                <div class="service-item text-center pt-3">
+                    <div class="p-4">
+                        <i class="fa fa-3x fa-book-open text-primary mb-4"></i>
+                        <h5 class="mb-3">Book Library</h5>
+                        <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                    </div>
                 </div>
             </div>
         </div>
-
-        <ul class="event_filter">
-            <li>
-                <a class="is_active" href="#!" data-filter="*">Show All</a>
-            </li>
-            @foreach (var category in Model.Select(course => course.Categorie).Distinct())
-            {
-                <li>
-                    <a href="#!" data-filter=".@category.ToLower()">@category</a>
-                </li>
-            }
-        </ul>
-
-        <div class="row event_box">
-            @foreach (var course in Model)
-            {
-                <div class="col-lg-4 col-md-6 align-self-center mb-30 event_outer @course.Categorie.ToLower()">
-                    <div class="events_item">
-                        <div class="thumb">
-                            <a href="#"><img src="~/wwwroot/images/course-01.jpg" alt="@course.Titre" /></a>
-                            <span class="category">@course.Categorie</span>
-                            <span class="price"><h6><em>$</em>@course.Prix</h6></span>
-                        </div>
-                        <div class="down-content">
-                            <span class="author">@course.Formateur.Nom @course.Formateur.Prenom</span>
-                            <h4>@course.Titre</h4>
-                            <p>@course.Description</p>
-                        </div>
-                    </div>
-                </div>
-            }
-        </div>
     </div>
-</section>
+</div>
+
 
 <script>
-        $(document).ready(function () {
-            // Initialize Isotope for filtering
-            var $grid = $('.event_box').isotope({
-                itemSelector: '.event_outer',
-                layoutMode: 'fitRows'
-            });
-
-            // Filtering function
-            $('.event_filter').on('click', 'a', function () {
-                var filterValue = $(this).attr('data-filter');
-                $grid.isotope({ filter: filterValue });
-
-                // Update active class on filter menu
-                $('.event_filter a').removeClass('is_active');
-                $(this).addClass('is_active');
-            });
+    $(document).ready(function () {
+        $(".owl-carousel").owlCarousel({
+            items: 1,
+            loop: true,
+            nav: true,
+            dots: true,
+            autoplay: true,
+            autoplayTimeout: 3000,
+            autoplayHoverPause: true
         });
+    });
+</script>
 
-        document.addEventListener('DOMContentLoaded', function() {
-            const clearFiltersBtn = document.getElementById('clearFiltersBtn');
-            const filterForm = document.getElementById('filterForm');
-            clearFiltersBtn.addEventListener('click', function() {
-                filterForm.querySelectorAll('input, select').forEach(input => {
-                    if (input.type === 'select-one') {
-                        input.selectedIndex = 0;
-                    } else {
-                        input.value = '';
-                    }
-                });
-                window.location.href = '@Url.Action("Index", "Home")';
-            });
-        });
-    </script>
 
-<style>
-        .hover-lift {
-            transition: transform 0.3s ease-in-out;
-        }
 
-            .hover-lift:hover {
-                transform: translateY(-10px);
-                box-shadow: 0 1rem 3rem rgba(0, 0, 0, .175) !important;
-            }
-    </style>
 
-<!-- Include Bootstrap and Bootstrap Icons -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-<!-- 2. Include Isotope.js (This must come after jQuery) -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/isotope/3.0.6/isotope.pkgd.min.js"></script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
